--- a/scss/_patterns_grid.scss
+++ b/scss/_patterns_grid.scss
@@ -3,6 +3,10 @@
 @mixin vf-p-grid-modifications {
   .row {
     width: 100%;
+
+    & & {
+      @extend %row-reset;
+    }
   }
 }
 
@@ -20,11 +24,6 @@
   %row-reset {
     @extend %row-reset-margin;
     @extend %row-reset-padding;
-  }
-
-  @mixin row-reset {
-    padding-left: 0;
-    padding-right: 0;
   }
 
   %span-full-grid-on-mobile {
@@ -58,10 +57,6 @@
     max-width: $grid-max-width;
     padding-left: $grid-margin-width;
     padding-right: $grid-margin-width;
-
-    & & {
-      @include row-reset;
-    }
 
     [class*='#{$grid-column-prefix}'] {
       grid-column-start: auto;
