fix: vertically centered items no longer span full width of parent

--- a/scss/_utilities_vertically-center.scss
+++ b/scss/_utilities_vertically-center.scss
@@ -5,6 +5,7 @@
   .u-vertically-center {
     align-items: center !important;
     display: grid;
+    justify-content: flex-start;
 
     > img {
       align-self: center !important;
