lighten bullet color

--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -292,7 +292,7 @@ $spv-list-item--inner: 0.25 * $spv-outer--small-scaleable; // padding top and bo
 
     &::before {
       align-self: start;
-      background-color: $color-mid-light;
+      background-color: $color-mid-x-light;
       border-radius: 100%;
       content: counter(li);
       counter-increment: li;
