replace placeholders with mixins

--- a/scss/_patterns_divider.scss
+++ b/scss/_patterns_divider.scss
@@ -3,7 +3,7 @@
 @mixin vf-p-divider {
   .p-divider {
     @extend %row;
-    @extend %row-reset-padding;
+    @include row-reset-padding;
   }
 
   .p-divider__block {
