--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -233,12 +233,12 @@ $spv-list-item--inner: 0.25 * $spv-outer--small-scaleable; // padding top and bo
 
     .p-stepped-list__item {
       @extend %row;
-      @extend %row-reset-padding;
+      @include row-reset-padding;
       margin-left: auto;
       width: 100%;
 
       .row & {
-        @extend %row-reset;
+        @include row-reset;
       }
     }
   }
