rm unnecesaery class

--- a/docs/examples/templates/vertical-spacing.html
+++ b/docs/examples/templates/vertical-spacing.html
@@ -6,25 +6,23 @@ category: _templates
 
 <div class="p-strip is-bordered is-deep">
   <div class="row">
-    <div class="u-equal-height">
-      <div class="col-4">
-        <h2>Guidelines</h2>
-        <p>If you are contributing to Vanilla, make sure to read and follow these guidelines.</p>
-        <ul class="p-list--divided">
-          <li class="p-list__item">
-            <a href="" class="p-link--soft">Accessibility&nbsp;›</a>
-          </li>
-          <li class="p-list__item">
-            <a href="" class="p-link--soft">Browser support&nbsp;›</a>
-          </li>
-          <li class="p-list__item">
-            <a href="" class="p-link--soft">Coding standards&nbsp;›</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-8 col-start-large-2 u-vertically-center">
-        <img src="https://assets.ubuntu.com/v1/4a810e12-guidelines-illustration.svg" alt="">
-      </div>
+    <div class="col-4">
+      <h2>Guidelines</h2>
+      <p>If you are contributing to Vanilla, make sure to read and follow these guidelines.</p>
+      <ul class="p-list--divided">
+        <li class="p-list__item">
+          <a href="" class="p-link--soft">Accessibility&nbsp;›</a>
+        </li>
+        <li class="p-list__item">
+          <a href="" class="p-link--soft">Browser support&nbsp;›</a>
+        </li>
+        <li class="p-list__item">
+          <a href="" class="p-link--soft">Coding standards&nbsp;›</a>
+        </li>
+      </ul>
+    </div>
+    <div class="col-8 u-vertically-center">
+      <img src="https://assets.ubuntu.com/v1/4a810e12-guidelines-illustration.svg" alt="">
     </div>
   </div>
 </div>
