fix vertical spacing example

--- a/docs/examples/templates/vertical-spacing.html
+++ b/docs/examples/templates/vertical-spacing.html
@@ -21,7 +21,7 @@ category: _templates
         </li>
       </ul>
     </div>
-    <div class="col-8 u-vertically-center">
+    <div class="col-6 col-start-large-7 u-vertically-center">
       <img src="https://assets.ubuntu.com/v1/4a810e12-guidelines-illustration.svg" alt="">
     </div>
   </div>
