.row: remove !important as it might be redundant

--- a/scss/_patterns_grid.scss
+++ b/scss/_patterns_grid.scss
@@ -46,7 +46,7 @@
   }
 
   %row {
-    display: grid !important;
+    display: grid;
     grid-template-rows: auto;
     margin-left: auto;
     margin-right: auto;
