Include live built vanilla CSS in examples
This means what whenever build/css/build.min.css is updated,
e.g. through the watcher, the docs site will
automatically update to you can always see the latest version
of CSS in /examples.

--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% if page.title %} {{ page.title }} | {% endif %} {{ site.name }}</title>
-    <link rel="stylesheet" type="text/css" href="/css/current-vanilla.css" />
+    <link rel="stylesheet" type="text/css" href="/build/css/build.css" />
   </head>
 
   <body {% if page.url != '/' %}style="margin: 1rem;"{% endif %}>
