--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -214,7 +214,7 @@
         </footer>
       </main>
 
-      <aside id="side-content" class="p-aside js-contents" style="display: none">
+      <aside id="side-content" class="u-hide--small p-aside js-contents" style="display: none">
         <div class="p-aside__section">
           <h4 class="p-aside__header">Contents</h4>
           <nav class="p-aside__nav">
