--- a/scss/_patterns_grid.scss
+++ b/scss/_patterns_grid.scss
@@ -51,8 +51,6 @@
     margin-left: auto;
     margin-right: auto;
     max-width: $grid-max-width;
-    padding-left: $grid-margin-width;
-    padding-right: $grid-margin-width;
 
     [class*='#{$grid-column-prefix}'] {
       grid-column-start: auto;
@@ -66,6 +64,8 @@
     @media (max-width: $threshold-4-6-col) {
       grid-gap: 0 map-get($grid-gutter-widths, small);
       grid-template-columns: repeat($grid-columns-small, minmax(0, 1fr));
+      padding-left: map-get($grid-margin-widths, small);
+      padding-right: map-get($grid-margin-widths, small);
 
       * {
         grid-column-end: span $grid-columns-small;
@@ -75,6 +75,8 @@
     @media (min-width: $threshold-4-6-col) and (max-width: $threshold-6-12-col) {
       grid-gap: 0 map-get($grid-gutter-widths, medium);
       grid-template-columns: repeat($grid-columns-medium, minmax(0, 1fr));
+      padding-left: map-get($grid-margin-widths, medium);
+      padding-right: map-get($grid-margin-widths, medium);
 
       * {
         grid-column-end: span $grid-columns-medium;
@@ -84,6 +86,8 @@
     @media (min-width: $threshold-6-12-col) {
       grid-gap: 0 map-get($grid-gutter-widths, large);
       grid-template-columns: repeat($grid-columns, minmax(0, 1fr));
+      padding-left: map-get($grid-margin-widths, large);
+      padding-right: map-get($grid-margin-widths, large);
 
       * {
         grid-column-end: span $grid-columns;
