move grid margins into map

--- a/scss/_settings_grid.scss
+++ b/scss/_settings_grid.scss
@@ -17,5 +17,11 @@ $grid-gutter-widths: (
   large: $sp-unit * 5
 );
 
+$grid-margin-widths: (
+  small: $sp-unit * 2,
+  medium: $sp-unit * 3,
+  large: $sp-unit * 3
+);
+
 $grid-margin-width: $sph-outer--large !default;
 $grid-max-width: 72rem !default;
