Introduces new variable to change the font-weight that represents bold fonts

--- a/scss/_base_typography-definitions.scss
+++ b/scss/_base_typography-definitions.scss
@@ -159,7 +159,7 @@
   }
 
   %bold {
-    font-weight: 400;
+    font-weight: $font-weight-bold;
   }
 
   // @section Adjustments to spacing between pairs of text elements e.g. p + h1
