--- a/scss/_patterns_links.scss
+++ b/scss/_patterns_links.scss
@@ -14,13 +14,13 @@
     }
 
     &.is-selected {
-      font-weight: 400;
+      font-weight: $font-weight-bold;
     }
   }
 
   .p-link--inverted {
     color: $color-light;
-    font-weight: 400;
+    font-weight: $font-weight-bold;
 
     &:hover {
       color: $color-light;
