--- a/scss/_patterns_table-of-contents.scss
+++ b/scss/_patterns_table-of-contents.scss
@@ -48,7 +48,7 @@
       }
 
       &.is-active {
-        font-weight: 400;
+        font-weight: $font-weight-bold;
         padding-left: $sp-x-small;
       }
     }
