fix strip selector so class order doesn't matter

--- a/scss/_patterns_strip.scss
+++ b/scss/_patterns_strip.scss
@@ -92,19 +92,19 @@
 }
 
 @mixin vf-p-strip-bordered {
-  [class^='p-strip'].is-bordered {
+  [class*='p-strip'].is-bordered {
     @extend %vf-pseudo-border--bottom;
   }
 }
 
 @mixin vf-p-strip-shallow {
-  [class^='p-strip'].is-shallow {
+  [class*='p-strip'].is-shallow {
     @extend %section-padding--shallow;
   }
 }
 
 @mixin vf-p-strip-deep {
-  [class^='p-strip'].is-deep {
+  [class*='p-strip'].is-deep {
     @extend %section-padding--deep;
   }
 }
