--- a/scss/_settings_font.scss
+++ b/scss/_settings_font.scss
@@ -11,4 +11,4 @@ $font-sizes: (
   base: 1rem,
   big: $font-size-largescreen
 ) !default;
-$font-weight-bold: 400;
+$font-weight-bold: 400 !default;
