--- a/scss/_base_typography-min-margins.scss
+++ b/scss/_base_typography-min-margins.scss
@@ -1,61 +1,61 @@
 @mixin vf-b-typography-min-margins {
   %u-min-margin--bottom--h1 {
     @media (max-width: $breakpoint-heading-threshold) {
-      margin-bottom: -#{map-get($nudges, nudge--h1-mobile)};
+      margin-bottom: -#{map-get($nudges, nudge--h1-mobile)} !important;
     }
 
     @media (min-width: $breakpoint-heading-threshold) {
-      margin-bottom: -#{map-get($nudges, nudge--h1)};
+      margin-bottom: -#{map-get($nudges, nudge--h1)} !important;
     }
 
     @if ($increase-font-size-on-larger-screens) {
       @media (min-width: $breakpoint-x-large) {
-        margin-bottom: -#{map-get($nudges, nudge--h1-large)};
+        margin-bottom: -#{map-get($nudges, nudge--h1-large)} !important;
       }
     }
   }
 
   %u-min-margin--bottom--h2 {
     @media (max-width: $breakpoint-heading-threshold) {
-      margin-bottom: -#{map-get($nudges, nudge--h2-mobile)};
+      margin-bottom: -#{map-get($nudges, nudge--h2-mobile)} !important;
     }
 
     @media (min-width: $breakpoint-heading-threshold) {
-      margin-bottom: -#{map-get($nudges, nudge--h2)};
+      margin-bottom: -#{map-get($nudges, nudge--h2)} !important;
     }
   }
 
   %u-min-margin--bottom--h3 {
     @media (max-width: $breakpoint-heading-threshold) {
-      margin-bottom: -#{map-get($nudges, nudge--h3-mobile)};
+      margin-bottom: -#{map-get($nudges, nudge--h3-mobile)} !important;
     }
 
     @media (min-width: $breakpoint-heading-threshold) {
-      margin-bottom: -#{map-get($nudges, nudge--h3)};
+      margin-bottom: -#{map-get($nudges, nudge--h3)} !important;
     }
   }
 
   %u-min-margin--bottom--h4 {
     @media (max-width: $breakpoint-heading-threshold) {
-      margin-bottom: -#{map-get($nudges, nudge--h4-mobile)};
+      margin-bottom: -#{map-get($nudges, nudge--h4-mobile)} !important;
     }
 
     @media (min-width: $breakpoint-heading-threshold) {
-      margin-bottom: -#{map-get($nudges, nudge--h4)};
+      margin-bottom: -#{map-get($nudges, nudge--h4)} !important;
     }
 
     @if ($increase-font-size-on-larger-screens) {
       @media (min-width: $breakpoint-x-large) {
-        margin-bottom: -#{map-get($nudges, nudge--h4-large)};
+        margin-bottom: -#{map-get($nudges, nudge--h4-large)} !important;
       }
     }
   }
 
   %u-min-margin--bottom--default-text {
-    margin-bottom: $sp-unit - map-get($nudges, nudge--p);
+    margin-bottom: $sp-unit - map-get($nudges, nudge--p) !important;
   }
 
   %u-min-margin--bottom--small {
-    margin-bottom: -#{map-get($nudges, nudge--small)};
+    margin-bottom: -#{map-get($nudges, nudge--small)} !important;
   }
 }
