--- a/scss/_utilities_margin-collapse.scss
+++ b/scss/_utilities_margin-collapse.scss
@@ -14,7 +14,9 @@
     }
 
     &--bottom {
-      margin-bottom: 0 !important;
+      &:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(p):not(small):not([class*='p-heading']) {
+        margin-bottom: 0 !important;
+      }
     }
 
     &--left {
