--- a/scss/_base_typography-definitions.scss
+++ b/scss/_base_typography-definitions.scss
@@ -151,19 +151,23 @@
     }
   }
 
-  %default-text {
+  %common-default-text-properties {
     line-height: map-get($line-heights, default-text);
-    margin-bottom: map-get($sp-after, default-text) - map-get($nudges, nudge--p);
     margin-top: 0;
     padding-top: map-get($nudges, nudge--p) + map-get($browser-rounding-compensations, p);
   }
 
-  %paragraph {
-    line-height: map-get($line-heights, default-text);
-    margin-bottom: map-get($sp-after, p) - map-get($nudges, nudge--p);
-    margin-top: 0;
-    padding-top: map-get($nudges, nudge--p) + map-get($browser-rounding-compensations, p);
+  %default-text {
+    @extend %common-default-text-properties;
+    margin-bottom: map-get($sp-after, default-text) - map-get($nudges, nudge--p);
+  }
 
+  %paragraph {
+    @extend %common-default-text-properties;
+
+    &:not(.u-no-margin--bottom) {
+      margin-bottom: map-get($sp-after, p) - map-get($nudges, nudge--p);
+    }
     &.u-no-margin--bottom {
       @extend %u-min-margin--bottom--default-text;
     }
