update p-card__content to extend u-no-margin--bottom

--- a/scss/_patterns_card.scss
+++ b/scss/_patterns_card.scss
@@ -70,6 +70,10 @@
     }
   }
 
+  .p-card__content {
+    @extend .u-no-margin--bottom;
+  }
+
   .p-card__thumbnail {
     max-height: map-get($icon-sizes, thumb--card);
   }
