rename min-margin to no-margin; extend in patterns that need it

--- a/scss/_base_typography-definitions.scss
+++ b/scss/_base_typography-definitions.scss
@@ -29,7 +29,7 @@
     }
 
     &.u-no-margin--bottom {
-      @extend %u-min-margin--bottom--h1;
+      @extend %u-no-margin--bottom--h1;
     }
   }
 
@@ -54,7 +54,7 @@
     }
 
     &.u-no-margin--bottom {
-      @extend %u-min-margin--bottom--h2;
+      @extend %u-no-margin--bottom--h2;
     }
   }
 
@@ -79,7 +79,7 @@
     }
 
     &.u-no-margin--bottom {
-      @extend %u-min-margin--bottom--h3;
+      @extend %u-no-margin--bottom--h3;
     }
   }
 
@@ -111,7 +111,7 @@
     }
 
     &.u-no-margin--bottom {
-      @extend %u-min-margin--bottom--h4;
+      @extend %u-no-margin--bottom--h4;
     }
   }
 
@@ -126,7 +126,7 @@
     padding-top: map-get($nudges, nudge--p) + map-get($browser-rounding-compensations, h5);
 
     &.u-no-margin--bottom {
-      @extend %u-min-margin--bottom--default-text;
+      @extend %u-no-margin--bottom--default-text;
     }
   }
 
@@ -147,7 +147,7 @@
     }
 
     &.u-no-margin--bottom {
-      @extend %u-min-margin--bottom--default-text;
+      @extend %u-no-margin--bottom--default-text;
     }
   }
 
@@ -164,13 +164,10 @@
 
   %paragraph {
     @extend %common-default-text-properties;
-
-    &:not(.u-no-margin--bottom) {
-      margin-bottom: map-get($sp-after, p) - map-get($nudges, nudge--p);
-    }
+    margin-bottom: map-get($sp-after, p) - map-get($nudges, nudge--p);
 
     &.u-no-margin--bottom {
-      @extend %u-min-margin--bottom--default-text;
+      @extend %u-no-margin--bottom--default-text;
     }
   }
 
@@ -187,7 +184,7 @@
     }
 
     &.u-no-margin--bottom {
-      @extend %u-min-margin--bottom--small;
+      @extend %u-no-margin--bottom--small;
     }
   }
 
@@ -200,7 +197,7 @@
     text-transform: uppercase;
 
     &.u-no-margin--bottom {
-      @extend %u-min-margin--bottom--small;
+      @extend %u-no-margin--bottom--small;
     }
   }
 
