--- a/scss/_base_typography-min-margins.scss
+++ b/scss/_base_typography-min-margins.scss
@@ -1,5 +1,5 @@
 @mixin vf-b-typography-min-margins {
-  %u-min-margin--bottom--h1 {
+  %u-no-margin--bottom--h1 {
     @media (max-width: $breakpoint-heading-threshold) {
       margin-bottom: -#{map-get($nudges, nudge--h1-mobile)} !important;
     }
@@ -15,7 +15,7 @@
     }
   }
 
-  %u-min-margin--bottom--h2 {
+  %u-no-margin--bottom--h2 {
     @media (max-width: $breakpoint-heading-threshold) {
       margin-bottom: -#{map-get($nudges, nudge--h2-mobile)} !important;
     }
@@ -25,7 +25,7 @@
     }
   }
 
-  %u-min-margin--bottom--h3 {
+  %u-no-margin--bottom--h3 {
     @media (max-width: $breakpoint-heading-threshold) {
       margin-bottom: -#{map-get($nudges, nudge--h3-mobile)} !important;
     }
@@ -35,7 +35,7 @@
     }
   }
 
-  %u-min-margin--bottom--h4 {
+  %u-no-margin--bottom--h4 {
     @media (max-width: $breakpoint-heading-threshold) {
       margin-bottom: -#{map-get($nudges, nudge--h4-mobile)} !important;
     }
@@ -51,11 +51,11 @@
     }
   }
 
-  %u-min-margin--bottom--default-text {
+  %u-no-margin--bottom--default-text {
     margin-bottom: $sp-unit - map-get($nudges, nudge--p) !important;
   }
 
-  %u-min-margin--bottom--small {
+  %u-no-margin--bottom--small {
     margin-bottom: -#{map-get($nudges, nudge--small)} !important;
   }
 }
