--- a/scss/_patterns_card.scss
+++ b/scss/_patterns_card.scss
@@ -71,7 +71,7 @@
   }
 
   .p-card__content {
-    @extend .u-no-margin--bottom;
+    @extend %u-no-margin--bottom--default-text;
   }
 
   .p-card__thumbnail {
