--- a/scss/_utilities_margin-collapse.scss
+++ b/scss/_utilities_margin-collapse.scss
@@ -8,6 +8,66 @@
     }
   }
 
+  %u-no-margin--bottom--h1 {
+    @media (max-width: $breakpoint-heading-threshold) {
+      margin-bottom: -#{map-get($nudges, nudge--h1-mobile)} !important;
+    }
+
+    @media (min-width: $breakpoint-heading-threshold) {
+      margin-bottom: -#{map-get($nudges, nudge--h1)} !important;
+    }
+
+    @if ($increase-font-size-on-larger-screens) {
+      @media (min-width: $breakpoint-x-large) {
+        margin-bottom: -#{map-get($nudges, nudge--h1-large)} !important;
+      }
+    }
+  }
+
+  %u-no-margin--bottom--h2 {
+    @media (max-width: $breakpoint-heading-threshold) {
+      margin-bottom: -#{map-get($nudges, nudge--h2-mobile)} !important;
+    }
+
+    @media (min-width: $breakpoint-heading-threshold) {
+      margin-bottom: -#{map-get($nudges, nudge--h2)} !important;
+    }
+  }
+
+  %u-no-margin--bottom--h3 {
+    @media (max-width: $breakpoint-heading-threshold) {
+      margin-bottom: -#{map-get($nudges, nudge--h3-mobile)} !important;
+    }
+
+    @media (min-width: $breakpoint-heading-threshold) {
+      margin-bottom: -#{map-get($nudges, nudge--h3)} !important;
+    }
+  }
+
+  %u-no-margin--bottom--h4 {
+    @media (max-width: $breakpoint-heading-threshold) {
+      margin-bottom: -#{map-get($nudges, nudge--h4-mobile)} !important;
+    }
+
+    @media (min-width: $breakpoint-heading-threshold) {
+      margin-bottom: -#{map-get($nudges, nudge--h4)} !important;
+    }
+
+    @if ($increase-font-size-on-larger-screens) {
+      @media (min-width: $breakpoint-x-large) {
+        margin-bottom: -#{map-get($nudges, nudge--h4-large)} !important;
+      }
+    }
+  }
+
+  %u-no-margin--bottom--default-text {
+    margin-bottom: $sp-unit - map-get($nudges, nudge--p) !important;
+  }
+
+  %u-no-margin--bottom--small {
+    margin-bottom: -#{map-get($nudges, nudge--small)} !important;
+  }
+
   .u-no-margin {
     margin: 0 !important;
 
