add fixed-width utility and expose it as class

--- a/scss/_vanilla.scss
+++ b/scss/_vanilla.scss
@@ -53,6 +53,7 @@
 @import 'utilities_floats';
 @import 'utilities_hide';
 @import 'utilities_image-position';
+@import 'utilities_layout';
 @import 'utilities_margin-collapse';
 @import 'utilities_off-screen';
 @import 'utilities_padding-collapse';
@@ -116,6 +117,7 @@
   @include vf-u-floats;
   @include vf-u-hide;
   @include vf-u-image-position;
+  @include vf-u-layout;
   @include vf-u-margin-collapse;
   @include vf-u-off-screen;
   @include vf-u-padding-collapse;
