--- a/scss/_patterns_grid.scss
+++ b/scss/_patterns_grid.scss
@@ -46,6 +46,8 @@
   }
 
   %row {
+    @extend %fixed-width-container;
+
     display: grid;
     grid-template-rows: auto;
     margin-left: auto;
@@ -64,8 +66,6 @@
     @media (max-width: $threshold-4-6-col) {
       grid-gap: 0 map-get($grid-gutter-widths, small);
       grid-template-columns: repeat($grid-columns-small, minmax(0, 1fr));
-      padding-left: map-get($grid-margin-widths, small);
-      padding-right: map-get($grid-margin-widths, small);
 
       * {
         grid-column-end: span $grid-columns-small;
@@ -75,8 +75,6 @@
     @media (min-width: $threshold-4-6-col) and (max-width: $threshold-6-12-col) {
       grid-gap: 0 map-get($grid-gutter-widths, medium);
       grid-template-columns: repeat($grid-columns-medium, minmax(0, 1fr));
-      padding-left: map-get($grid-margin-widths, medium);
-      padding-right: map-get($grid-margin-widths, medium);
 
       * {
         grid-column-end: span $grid-columns-medium;
@@ -86,8 +84,6 @@
     @media (min-width: $threshold-6-12-col) {
       grid-gap: 0 map-get($grid-gutter-widths, large);
       grid-template-columns: repeat($grid-columns, minmax(0, 1fr));
-      padding-left: map-get($grid-margin-widths, large);
-      padding-right: map-get($grid-margin-widths, large);
 
       * {
         grid-column-end: span $grid-columns;
