--- a/scss/_utilities_layout.scss
+++ b/scss/_utilities_layout.scss
@@ -3,6 +3,7 @@
     margin-left: auto;
     margin-right: auto;
     max-width: $grid-max-width;
+    width: 100%;
     // set static gutter width per breakpoint
     @media (max-width: $threshold-4-6-col) {
       padding-left: map-get($grid-margin-widths, small);
