remove duplicate code. convert margin to padding so it pushes border down

--- a/scss/_patterns_card.scss
+++ b/scss/_patterns_card.scss
@@ -130,7 +130,7 @@
 
   .p-card__header {
     border-bottom: 1px solid $color-mid-light;
-    margin-bottom: $spv-inner--large;
+    padding-bottom: $spv-inner--large;
 
     > .p-link--soft {
       display: inline-block;
@@ -140,15 +140,5 @@
 
   .p-card__thumbnail {
     max-height: map-get($icon-sizes, thumb--card);
-  }
-
-  .p-card__header {
-    border-bottom: 1px solid $color-mid-light;
-    margin-bottom: $spv-inner--large;
-
-    > .p-link--soft {
-      display: inline-block;
-      overflow: auto;
-    }
   }
 }
