--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -100,7 +100,7 @@ $spv-list-item--inner: 0.25 * $spv-outer--small-scaleable; // padding top and bo
 @mixin vf-p-list-item-state {
   .is-ticked {
     background-image: svg-tick($color-accent);
-    background-position-y: 56%; // slightly off-center to align better with text.
+    background-position-y: $spv-list-item--inner + map-get($nudges, nudge--p);
     background-repeat: no-repeat;
     background-size: $tick-height;
     padding-left: 2rem;
