--- a/docs/examples/templates/vertical-spacing.html
+++ b/docs/examples/templates/vertical-spacing.html
@@ -35,8 +35,10 @@ category: _templates
   </div>
   <div class="row">
     <div class="col-6">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam</p>
     </div>
     <div class="col-6">
       <img src="http://suplugins.com/podium/images/placeholder-05.jpg" alt="" />
@@ -47,13 +49,16 @@ category: _templates
 <section class="p-strip is-bordered">
   <div class="row">
     <div class="col-4 p-card">
-      <p class="p-card__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+      <p class="p-card__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
     </div>
     <div class="col-4 p-card">
-      <p class="p-card__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+      <p class="p-card__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
     </div>
     <div class="col-4 p-card">
-      <p class="p-card__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+      <p class="p-card__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
     </div>
   </div>
   <div class="row">
@@ -85,11 +90,11 @@ category: _templates
       </div>
     </div>
 
-      <div class="col-3 p-divider__block">
-        <h2>Spotlight</h2>
-        <h3>Why containers and automation are essential in a world being eaten by software</h3>
-        <p><time pubdate="" datetime="Thu, 31 Aug 2017 15:00:00 +0000">31 August 2017</time></p>
-      </div>
+    <div class="col-3 p-divider__block">
+      <h2>Spotlight</h2>
+      <h3>Why containers and automation are essential in a world being eaten by software</h3>
+      <p><time pubdate="" datetime="Thu, 31 Aug 2017 15:00:00 +0000">31 August 2017</time></p>
+    </div>
   </div>
 </section>
 
@@ -97,40 +102,43 @@ category: _templates
 <section class="p-strip">
   <div class="row">
     <div class="col-8">
-        <h2>Manage your servers without leaving your seat</h2>
-        <p>Use the Web <abbr title="User interface">UI</abbr> or the command line (<abbr title="Command line interface">CLI</abbr>) to remotely manage your nodes or use the <abbr title="Application programming interface">API</abbr> to automate management.</p>
+      <h2>Manage your servers without leaving your seat</h2>
+      <p>Use the Web <abbr title="User interface">UI</abbr> or the command line (<abbr
+          title="Command line interface">CLI</abbr>) to remotely manage your nodes or use the <abbr
+          title="Application programming interface">API</abbr> to automate management.</p>
     </div>
   </div>
   <div class="row p-divider">
-      <div class="col-6 p-divider__block">
-          <img src="https://assets.ubuntu.com/v1/df1e6f24-Operate-your-machines-remotely.png?h=295">
-          <h3>Operate your machines remotely</h3>
-          <p>Manage individual or groups of servers.</p>
-          <ul>
-              <li>Power on/off</li>
-              <li>Commission</li>
-              <li>Deploy</li>
-              <li>Assign an owner</li>
-              <li>Mark a node fixed or broken</li>
-              <li>Enter rescue mode </li>
-              <li>Test your hardware</li>
-              <li>Assign to physical zones</li>
-          </ul>
-          <p>
-              <a href="https://docs.ubuntu.com/maas/2.2/en/intro-concepts#node-actions">Learn more about the node actions</a>
-          </p>
-      </div>
-      <div class="col-6 p-divider__block">
-          <img src="https://assets.ubuntu.com/v1/6ecf284f-Provision-with-any-OS-image.png?h=293">
-          <h3>Provision with any <abbr title="Operating system">OS</abbr> image</h3>
-          <p>Select the <abbr title="Operating system">OS</abbr> you require in your data centre <span aria-describedby="image-info">*</span></p>
-          <ul>
-            <li>Ubuntu</li>
-            <li>CentOS</li>
-            <li>Windows</li>
-            <li>RHEL</li>
-            <li>SUSE</li>
-          </ul>
-      </div>
+    <div class="col-6 p-divider__block">
+      <img src="https://assets.ubuntu.com/v1/df1e6f24-Operate-your-machines-remotely.png?h=295">
+      <h3>Operate your machines remotely</h3>
+      <p>Manage individual or groups of servers.</p>
+      <ul>
+        <li>Power on/off</li>
+        <li>Commission</li>
+        <li>Deploy</li>
+        <li>Assign an owner</li>
+        <li>Mark a node fixed or broken</li>
+        <li>Enter rescue mode </li>
+        <li>Test your hardware</li>
+        <li>Assign to physical zones</li>
+      </ul>
+      <p>
+        <a href="https://docs.ubuntu.com/maas/2.2/en/intro-concepts#node-actions">Learn more about the node actions</a>
+      </p>
+    </div>
+    <div class="col-6 p-divider__block">
+      <img src="https://assets.ubuntu.com/v1/6ecf284f-Provision-with-any-OS-image.png?h=293">
+      <h3>Provision with any <abbr title="Operating system">OS</abbr> image</h3>
+      <p>Select the <abbr title="Operating system">OS</abbr> you require in your data centre <span
+          aria-describedby="image-info">*</span></p>
+      <ul>
+        <li>Ubuntu</li>
+        <li>CentOS</li>
+        <li>Windows</li>
+        <li>RHEL</li>
+        <li>SUSE</li>
+      </ul>
+    </div>
   </div>
 </section>
