Fix base buttons class - .is--disabled to .is-disabled

--- a/scss/_base_button.scss
+++ b/scss/_base_button.scss
@@ -30,7 +30,7 @@
     }
 
     &:disabled,
-    &.is--disabled {
+    &.is-disabled {
       cursor: not-allowed;
       opacity: 0.5;
     }
@@ -106,7 +106,7 @@
   }
 
   &:disabled,
-  &.is--disabled {
+  &.is-disabled {
     &:active,
     &:hover {
       background-color: $button-disabled-background-color;
