Includes the referenced margin collapse utility into the typography base definitions

--- a/scss/_base_typography-definitions.scss
+++ b/scss/_base_typography-definitions.scss
@@ -1,4 +1,7 @@
+@import 'utilities_margin-collapse';
+
 @mixin vf-b-typography-definitions {
+  @include vf-u-margin-collapse;
   //@section Heading styling in placeholders
 
   %vf-heading-1 {
