correct comment typo

--- a/scss/_patterns_grid.scss
+++ b/scss/_patterns_grid.scss
@@ -46,7 +46,7 @@
   }
 
   %display-block {
-    // make columns explicitly display:block; the use of a placeholder is to ensure the ruel appears only once in the compiled css
+    // make columns explicitly display:block; the use of a placeholder is to ensure the rule appears only once in the compiled css
     display: block;
   }
 
