fix accordeon and table line height

--- a/scss/_base_tables.scss
+++ b/scss/_base_tables.scss
@@ -5,6 +5,7 @@
   table {
     border: 0;
     border-collapse: collapse;
+    line-height: map-get($line-heights, default-text);
     overflow-x: auto;
     padding-bottom: $spv-outer--scaleable;
     table-layout: fixed;
