fix inline forms

--- a/scss/_patterns_forms.scss
+++ b/scss/_patterns_forms.scss
@@ -39,6 +39,7 @@
 
     .p-form__group {
       @media screen and (min-width: $breakpoint-medium) {
+        display: flex;
         width: auto;
 
         + .p-form__group,
