margin-collapse utilities in separate file

--- a/scss/_base_typography-definitions.scss
+++ b/scss/_base_typography-definitions.scss
@@ -1,8 +1,8 @@
-@import 'utilities_margin-collapse';
+@import 'base_placeholders-margin-collapse';
 
 @mixin vf-b-typography-definitions {
-  @include vf-u-margin-collapse;
   //@section Heading styling in placeholders
+  @include vf-b-placeholders-margin-collapse;
 
   %vf-heading-1 {
     @include heading-max-width--short;
