--- a/scss/_patterns_subnav.scss
+++ b/scss/_patterns_subnav.scss
@@ -1,6 +1,8 @@
 @import 'settings';
 
 @mixin vf-p-subnav {
+  $color-navigation-background: $color-x-light !default;
+
   .p-subnav {
     position: relative;
 
