--- a/scss/_vanilla.scss
+++ b/scss/_vanilla.scss
@@ -14,6 +14,7 @@
 @import 'patterns_form-help-text';
 @import 'patterns_form-validation';
 @import 'patterns_forms';
+@import 'patterns_global-nav';
 @import 'patterns_grid';
 @import 'patterns_heading-icon';
 @import 'patterns_headings';
@@ -78,6 +79,7 @@
   @include vf-p-form-help-text;
   @include vf-p-form-validation;
   @include vf-p-forms;
+  @include vf-p-global-nav;
   @include vf-p-grid-modifications;
   @include vf-p-grid;
   @include vf-p-heading-icon;
