--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -7,10 +7,8 @@
     <title>{% if page.title %} {{ page.title }} | {% endif %} {{ site.name }}</title>
     <link rel="stylesheet" type="text/css" href="/build/css/build.css" />
   </head>
-
-  <body {% if page.url != '/' %}style="margin: 1rem;"{% endif %}>
+  <body {% if page.url != '/' and page.url != '/examples/templates/canonical-nav/' %}style="margin:1rem"{% endif %}>
     {{ content }}
-
     <script>
       function inIframe () {
         try {
